[project]
name = "register-to-class-multi-agent"
version = "0.1.0"
description = "Multi agent system to decide whether to register to Ivonne class on Wednesday"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=0.0.20",
    "garminconnect==0.2.40",
    "garth==0.5.21",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "python-dotenv>=1.0.0"
]
